force-app/main/default/objects/MovieDb__c/MovieDb__c.object-meta.xml
<CustomObject>
    <label>Movie Database</label>
    <pluralLabel>Movie Database Entries</pluralLabel>
    <name>MovieDb__c</name>
    <sharingModel>ReadWrite</sharingModel>
    <labelField>Title__c</labelField>
    <listViews>
        <fullName>All</fullName>
        <filter>1</filter>
        <label>All Movie Database</label>
    </listViews>
</CustomObject>