force-app/main/default/objects/MovieDb__c/fields/Banner_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Banner_Image_URL__c</fullName>
    <label>Banner Image URL</label>
    <type>TextArea</type>
    <length>131072</length>
    <description>Banner image URL</description>
</CustomField>