force-app/main/default/objects/MovieDb__c/fields/Cast__c.field-meta.xml
<CustomField>
    <fullName>Cast__c</fullName>
    <label>Cast</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Comma-separated cast members</description>
</CustomField>