force-app/main/default/objects/MovieDb__c/fields/Cast_Count__c.field-meta.xml
<CustomField>
    <fullName>Cast_Count__c</fullName>
    <label>Cast Count</label>
    <type>Number</type>
    <description>Number of cast members</description>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>