force-app/main/default/objects/MovieDb__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <description>Movie category classification</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Telugu_Full_Length_Movies</fullName>
                <label>Telugu Full Length Movies</label>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>