force-app/main/default/objects/MovieDb__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Full movie synopsis</description>
</CustomField>