force-app/main/default/objects/MovieDb__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Text</type>
    <length>50</length>
    <description>Movie duration (e.g., 2h 37m)</description>
</CustomField>