force-app/main/default/objects/MovieDb__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration Minutes</label>
    <type>Number</type>
    <description>Duration in minutes</description>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>