force-app/main/default/objects/MovieDb__c/fields/Full_URL__c.field-meta.xml
<CustomField>
    <fullName>Full_URL__c</fullName>
    <label>Full URL</label>
    <type>TextArea</type>
    <length>131072</length>
    <description>Full YouTube URL for the movie</description>
</CustomField>