force-app/main/default/objects/MovieDb__c/fields/Genre_List__c.field-meta.xml
<CustomField>
    <fullName>Genre_List__c</fullName>
    <label>Genre List</label>
    <type>Text</type>
    <length>500</length>
    <description>Pipe-separated genre list for queries</description>
</CustomField>