force-app/main/default/objects/MovieDb__c/fields/Genres__c.field-meta.xml
<CustomField>
    <fullName>Genres__c</fullName>
    <label>Genres</label>
    <type>MultiselectPicklist</type>
    <description>Movie genres (comma-separated)</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Biography</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Sci_Fi</fullName>
                <label>Sci-Fi</label>
            </value>
            <value>
                <fullName>Mystery_Thriller</fullName>
                <label>Mystery & Thriller</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>