force-app/main/default/objects/MovieDb__c/fields/Input_Language__c.field-meta.xml
<CustomField>
    <fullName>Input_Language__c</fullName>
    <label>Input Language</label>
    <type>Picklist</type>
    <description>Original language of data entry</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telugu</fullName>
                <default>true</default>
                <label>Telugu</label>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Malayalam</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>