force-app/main/default/objects/MovieDb__c/fields/Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured__c</fullName>
    <label>Is Featured</label>
    <type>Checkbox</type>
    <description>Featured movie based on score and top 10 status</description>
    <defaultValue>false</defaultValue>
</CustomField>