force-app/main/default/objects/MovieDb__c/fields/Is_Top_10__c.field-meta.xml
<CustomField>
    <fullName>Is_Top_10__c</fullName>
    <label>Is Top 10</label>
    <type>Checkbox</type>
    <description>Indicates if movie is in top 10</description>
    <defaultValue>false</defaultValue>
</CustomField>