force-app/main/default/objects/MovieDb__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <type>Text</type>
    <length>20</length>
    <description>Score value (e.g., 7.8/10)</description>
</CustomField>