force-app/main/default/objects/MovieDb__c/fields/Match_Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Score_Value__c</fullName>
    <label>Match Score Value</label>
    <type>Number</type>
    <description>Numeric score extracted from Match Score</description>
    <precision>3</precision>
    <scale>1</scale>
</CustomField>