force-app/main/default/objects/MovieDb__c/fields/Movie_Language__c.field-meta.xml
<CustomField>
    <fullName>Movie_Language__c</fullName>
    <label>Movie Language</label>
    <type>Picklist</type>
    <description>Primary language of the movie</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Malayalam</fullName>
            </value>
            <value>
                <fullName>Kannada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>