force-app/main/default/objects/MovieDb__c/fields/Normalized_Rating__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Rating__c</fullName>
    <label>Normalized Rating</label>
    <type>Picklist</type>
    <description>Standardized rating code</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U</fullName>
                <label>U - Universal</label>
            </value>
            <value>
                <fullName>UA</fullName>
                <label>UA - Parental Guidance</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>A - Adult</label>
            </value>
            <value>
                <fullName>Not_Rated</fullName>
                <label>Not Rated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>