force-app/main/default/objects/MovieDb__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <description>Content rating classification</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U_A__India</fullName>
                <label>U/A (India)</label>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>UA</fullName>
            </value>
            <value>
                <fullName>U_A</fullName>
                <label>U/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>