force-app/main/default/objects/MovieDb__c/fields/Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_URL__c</fullName>
    <label>Thumbnail URL</label>
    <type>TextArea</type>
    <length>131072</length>
    <description>YouTube thumbnail image URL</description>
</CustomField>