force-app/main/default/objects/MovieDb__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>255</length>
    <description>Movie or series title</description>
</CustomField>