force-app/main/default/objects/MovieDb__c/fields/Trim_URL__c.field-meta.xml
<CustomField>
    <fullName>Trim_URL__c</fullName>
    <label>Trim URL</label>
    <type>TextArea</type>
    <length>131072</length>
    <description>Trimmed YouTube URL</description>
</CustomField>