force-app/main/default/objects/MovieDb__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <description>Content type classification</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Movie</fullName>
                <default>true</default>
                <label>Movie</label>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
            <value>
                <fullName>Documentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>