force-app/main/default/objects/MovieDb__c/fields/Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Video_ID__c</fullName>
    <label>Video ID</label>
    <type>Text</type>
    <length>50</length>
    <description>YouTube video identifier</description>
</CustomField>