force-app/main/default/objects/MovieDb__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Text</type>
    <length>10</length>
    <description>Release year of the movie</description>
</CustomField>