force-app/main/default/objects/MovieDb__c/fields/YouTube_Embed_URL__c.field-meta.xml
<CustomField>
    <fullName>YouTube_Embed_URL__c</fullName>
    <label>YouTube Embed URL</label>
    <type>TextArea</type>
    <length>131072</length>
    <description>Standardized embed URL</description>
</CustomField>