force-app/main/default/objects/MovieDb__c/fields/YouTube_Thumbnail_1280__c.field-meta.xml
<CustomField>
    <fullName>YouTube_Thumbnail_1280__c</fullName>
    <label>YouTube Thumbnail 1280</label>
    <type>TextArea</type>
    <length>131072</length>
    <description>High-res thumbnail URL (1280x720)</description>
</CustomField>