force-app/main/default/objects/MovieDb__c/fields/YouTube_URL__c.field-meta.xml
<CustomField>
    <fullName>YouTube_URL__c</fullName>
    <label>YouTube URL</label>
    <type>TextArea</type>
    <length>131072</length>
    <description>YouTube embed URL</description>
</CustomField>